[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Config
dotenv = "0.15"
config = "0.11"
# Logging
log = "0.4"
env_logger = "0.9"
# Serialize/deserialize
serde = "1"
serde_derive = "1"
# Other
argparse = "0.2"
anyhow = "1"
regex = "1"
lazy_static = "1"
itertools = "0.10"
